tests/baselines/reference/exportDefaultMissingName.errors.txt
tests/cases/compiler/exportDefaultMissingName.ts(1,16): error TS2304: Cannot find name 'xyzzy'.


==== tests/cases/compiler/exportDefaultMissingName.ts (1 errors) ====
    export default xyzzy;
                   ~~~~~
!!! error TS2304: Cannot find name 'xyzzy'.